--- a/sasana/templates/sasana/cari_sasana.html
+++ b/sasana/templates/sasana/cari_sasana.html
@@ -62,7 +62,7 @@
     <div class="max-w-4xl mx-auto">
         <h1 class="text-2xl font-bold text-gray-800 mb-2">Temukan Sasana Terdekat</h1>
         <p class="text-gray-600 mb-6 text-justify">Cari lokasi sasana Eltekers Indonesia terdekat dan mulai perjalanan terapi Anda sekarang!</p>
-        <input type="text" id="searchBox" placeholder="Cari sasana berdasarkan lokasi, kota atau nama..." oninput="filterHasil()" class="w-full border rounded-md px-4 py-3 mb-6 shadow-sm focus:outline-none focus:ring-2 focus:ring-blue-300">
+        <input type="text" id="searchBox" placeholder="Cari sasana berdasarkan nama atau alamat..." oninput="filterHasil()" class="w-full border rounded-md px-4 py-3 mb-6 shadow-sm focus:outline-none focus:ring-2 focus:ring-blue-300">
         
         <h2 class="text-xl font-semibold mb-4 text-gray-700">Sasana Terdekat</h2>
         <ul id="hasil" class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-4">
